// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TowerDisk snapshot matches snapshot with isDragging false 1`] = `
[
  <div>
    image-mock
  </div>,
  <div
    className="disk"
  >
    <img
      alt="alt-text"
      className="disk-image"
      src=""
    />
  </div>,
]
`;

exports[`TowerDisk snapshot matches snapshot with isDragging true 1`] = `
[
  <div>
    image-mock
  </div>,
  <div
    className="disk dragging"
  >
    <img
      alt="alt-text"
      className="disk-image"
      src=""
    />
  </div>,
  <div
    className="disk-drag-layer"
    style={
      {
        "height": "100%",
        "left": 0,
        "pointerEvents": "none",
        "position": "fixed",
        "top": 0,
        "width": "100%",
        "zIndex": 10,
      }
    }
  >
    <div
      className="disk dragging-preview"
      style={
        {
          "display": "none",
        }
      }
    >
      <img
        alt="alt-text"
        className="disk-image"
        src=""
      />
    </div>
  </div>,
]
`;
